# v3x1025

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Blueprint  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT.md  Dockerfile  FINAL_STATUS.md  LICENSE  LICENSE.md  MANIFEST.txt  NOTICE.md  README.md  SECURITY.md  SUBMISSION_REPORT.md  TECHNICAL_DEFENSE.md  TEST_RESULTS.md  VERIFICATION_FOR_TOM_AND_DOM.md  docker-compose.yml  gitstructure  locustfile.py  postman_collection.json  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: faqs.txt  sample_inventory.json  sample_policies.txt  service_manual_excerpt.txt
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  CONFIG_SCHEMA.md  LOGGING.md  REVIEW_RESPONSES.md  SEQUENCE_DIAGRAMS.md  TESTING_GUIDE.md
k8s/manifests/: redis-sentinel.yaml
scripts/: __init__.py  chaos_test.py  demo_ingest.py  demo_query.py  eval_rag_generate.py  quickstart.sh  security_scan.sh  validate_system.py
src/: __init__.py  agent.py  app.py  circuit_breaker.py  config.py  embed.py  generate.py  ingest.py  mmr_retriever.py  models.py  retrieve.py  tasks.py
src/dms/: __init__.py  base.py  cdk_adapter.py  mock_adapter.py  reynolds_adapter.py
tests/: __init__.py  conftest.py  test_adversarial.py  test_agent.py  test_hallucination.py  test_ingest.py  test_load.py  test_parametrized.py  test_retrieve.py
v3-main/: CONTRACTOR_VALIDATION_GUIDE.md  Dockerfile  README.md  SYSTEM_REQUIREMENTS.md  deploy.sh  docker-compose.production.yml  docker-compose.yml  health_check.py  load_test.py  multi_tenant_setup.py  production-validator.py  requirements.txt
v3-main/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml
v3-main/monitoring/: blue1-alerts.yml  grafana-dashboard.json  prometheus-config.yaml
v3-main/nginx/: nginx.conf
v3-main/optional-docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CURRENT_STATUS.md  DELIVERY_SUMMARY.md  OPERATIONS_RUNBOOK.md  PRODUCTION_TODO.md  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  UNFINISHED_TODO.md
v3-main/security/: secrets-management.yaml  security-policies.yaml
(+45 files in other folders)
